fixed snap scrolling on mobile, added bio, gallery, and contact section to home page

--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,12 @@
   }
 }
 
+@media (max-width: 40rem) {
+  html {
+    scroll-snap-type: y mandatory;
+  } 
+}
+
 body {
   /* 4. Add accessible line-height */
   line-height: 1.5;
